# CMakeTest

./: local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/chalilayang/com/cmaketest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/one/: CMakeLists.txt
app/src/main/java/chalilayang/com/cmaketest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/chalilayang/com/cmaketest/: ExampleUnitTest.java
assimplibrary/: build.gradle
assimplibrary/src/androidTest/java/chalilayang/com/assimplibrary/: ExampleInstrumentedTest.java
assimplibrary/src/main/: AndroidManifest.xml
assimplibrary/src/main/res/values/: strings.xml
assimplibrary/src/test/java/chalilayang/com/assimplibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencvlibrary/: CMakeLists.txt  build.gradle
opencvlibrary/native/: native-lib.cpp
opencvlibrary/src/androidTest/java/chalilayang/com/opencvlibrary/: ExampleInstrumentedTest.java
opencvlibrary/src/main/: AndroidManifest.xml
opencvlibrary/src/main/res/values/: strings.xml
opencvlibrary/src/test/java/chalilayang/com/opencvlibrary/: ExampleUnitTest.java
